# home-projects

./: .bash_history  .bashrc  .bashrc.bak  .claude.json  .env  .git-credentials  .gitconfig  .netrc  A1_COMPLETION_PLAN.md  ALL_TEST_MOUSE_FINAL_REPORT.md  ANTI_LIE_FINAL_REPORT.md  ANTI_LIE_MUTATION_EXPANSION.md  ANTI_LIE_STRATEGY.md  C11_ANALYSIS_CSV_TEMPLATE.csv  C11_ANALYSIS_INDEX.md  C11_ANALYSIS_MANUAL_GUIDE.md  C11_ANALYSIS_SUMMARY.md  C11_ANALYSIS_TEMPLATE.md  C11_LIBRARIES_ANALYSIS_REPORT.md  CURRENT-STATUS-2026-03-05.md  EVOLUTION_MAP.md  EVOLUTION_MAP_GUIDE.md  FILES_MANIFEST.md  FREELANG-COMPLETE-GUIDE.md  FREELANG_COMPLETENESS.md  FREELANG_COMPLETION_STATUS_2026_03_02.md  FREELANG_FEATURE_ASSESSMENT.md  FREELANG_GOGS_INVESTIGATION.md  FREELANG_LANGUAGE_INDEPENDENCE_AUDIT.md  FREELANG_OS_KERNEL_SELF_HOSTING_AUDIT.md  FREELANG_PURE_IMPLEMENTATIONS_DETAILED.md  FREELANG_REALITY_CHECK.md  FREELANG_V2_SELF_HOSTING_STATUS.md  FREELANG_V4_ECOSYSTEM_ANALYSIS.md  GLOBAL_SYNAPSE_ENGINE_DESIGN_v1.0.md  MINDLANG_COMPLETE_ROADMAP.md  MINDLANG_DAY3_PROGRESS.md  MINDLANG_DAY4_COMPLETION.md  MINDLANG_DAY5_PROGRESS.md  MINDLANG_DAY7_COMPLETION.md  (+30 more)
.cargo/: .global-cache
freelang-mail-sentry/: Cargo.toml  README.md
freelang-mail-sentry/src/: feature_extractor.fl  mail_classifier.fl  main.fl  mod.fl  neural_network.fl  reputation_tracker.fl
freelang-runtime/: Cargo.toml  PERFORMANCE_OPTIMIZATION.md
freelang-runtime/benches/: function_dispatch.rs
freelang-runtime/src/: lib.rs  main.rs
freelang-sovereign-naming/: Cargo.toml  IMPLEMENTATION_REPORT.md  README.md
(+8745 files in other folders)
