[package]
name = "l0nn-mail-sentry"
version = "1.0.0"
edition = "2021"
authors = ["Kim <kim@dclub.kr>"]
description = "Challenge 16: L0NN-Mail-Sentry - AI Neural Network Spam/Phishing Filter"

[dependencies]

[[bin]]
name = "sentry"
path = "src/main.fl"

[lib]
name = "l0nn_mail_sentry"
path = "src/mod.fl"

[profile.release]
opt-level = 3
lto = true
