[package]
name = "freelang-runtime"
version = "0.2.0"
edition = "2021"
authors = ["FreeLang Team"]
description = "FreeLang Rust Runtime - Independent execution engine with 91 stdlib functions"

[lib]
name = "freelang_runtime"
path = "src/lib.rs"

[[bin]]
name = "freelang-runtime"
path = "src/main.rs"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[[bench]]
name = "function_dispatch"
harness = false

[dependencies]
parking_lot = "0.12"
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"

[features]
default = ["json"]
json = ["serde", "serde_json"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
