[package]
name = "sovereign-naming"
version = "1.0.0"
edition = "2021"
authors = ["Kim <kim@dclub.kr>"]
description = "Challenge 15: Sovereign-Naming - Distributed DNS via Kademlia DHT"

[dependencies]

[[bin]]
name = "sovereign-naming"
path = "src/main.fl"

[profile.release]
opt-level = 3
lto = true
